# youtube-analytics-project

./: pyproject.toml  requirements.txt
homework-2/: moscowpython.json
src/: channel.py  playlist.py  video.py
