[tool.poetry]
name = "youtube-analytics-project"
version = "0.1.0"
description = ""
authors = ["Maxim Madunts <max.madunts@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
build = "^1.0.3"
google-api-python-client = "^2.115.0"
isodate = "^0.6.1"
self = "^2020.12.3"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

